# chizu

./: .chizu.toml  .gitignore  .grakno.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  grakno.db  grakno.db.usearch
.github/workflows/: release.yml
benchmarks/: baseline-phase1.json  chizu-self.toml
chizu-cli/: Cargo.toml  guide.md
chizu-cli/src/: main.rs  visualize.rs
chizu-cli/templates/: explorer.html.j2
chizu-cli/tests/: integration_cli.rs
chizu-core/: Cargo.toml
chizu-core/src/: aws.rs  lib.rs
chizu-core/src/config/: mod.rs
chizu-core/src/model/: edge_kind.rs  entity.rs  entity_kind.rs  id.rs  mod.rs
chizu-core/src/provider/: bedrock.rs  mod.rs  openai.rs
chizu-core/src/query/: classifier.rs  mod.rs  traversal.rs
chizu-core/src/reranker/: bedrock.rs  http.rs  mod.rs
chizu-core/src/store/: mod.rs  sqlite.rs  usearch.rs
chizu-core/tests/: property_tests.rs
chizu-index/: Cargo.toml
chizu-index/assets/: llama3.tiktoken.zst
chizu-index/src/: cleanup.rs  embedder.rs  error.rs  indexer.rs  lib.rs  ownership.rs  registry.rs  summarizer.rs  task_routes.rs  walk.rs
chizu-index/src/adapter/: cargo.rs  doc.rs  frontmatter.rs  mise.rs  mod.rs  npm.rs  rust.rs  scanner.rs  site.rs
chizu-index/tests/: cleanup_deleted_file.rs  cleanup_renamed_component.rs  incremental_reindex.rs  index_rust_workspace.rs  live_ollama_batch_sweep.rs  llm_integration.rs  perf_index_repo.rs  property_tests.rs
chizu-query/: Cargo.toml
chizu-query/src/: cutoff.rs  error.rs  eval.rs  expansion.rs  lib.rs  pipeline.rs  plan.rs  rerank.rs  retrieval.rs
crates/chizu/: Cargo.toml
crates/chizu-cli/src/: main.rs
crates/chizu-core/: Cargo.toml
crates/chizu-core/benches/: backends.rs
crates/chizu-core/src/: error.rs  lib.rs
crates/chizu-core/src/config/: mod.rs
crates/chizu-core/src/model/: edge_kind.rs  entity.rs  entity_kind.rs  file.rs  task_route.rs
crates/chizu-core/src/store/: mod.rs  stats.rs
crates/chizu-core/src/store/grafeo/: edges.rs  embeddings.rs  entities.rs  files.rs  mod.rs  stats.rs  summaries.rs  task_routes.rs
crates/chizu-core/src/store/sqlite/: edges.rs  embeddings.rs  entities.rs  files.rs  stats.rs  summaries.rs  usearch.rs
crates/chizu-index/: Cargo.toml
crates/chizu-index/src/: discover.rs  error.rs  id.rs  indexer.rs  lib.rs  markdown.rs
crates/chizu-query/: Cargo.toml
crates/chizu-query/src/: classify.rs  expand.rs  lib.rs  pipeline.rs  rerank.rs  retrieve.rs
crates/chizu-summarize/: Cargo.toml
crates/chizu-summarize/src/: embedding.rs  error.rs  prompt.rs  summarizer.rs
crates/chizu-visualize/: Cargo.toml
crates/chizu-visualize/src/: layout.rs  lib.rs  style.rs
crates/chizu/src/: cli.rs  config.rs  main.rs  observability.rs
crates/grakno/: Cargo.toml
crates/grakno-core/: Cargo.toml
crates/grakno-core/benches/: backends.rs
crates/grakno-core/src/: error.rs  lib.rs
crates/grakno-core/src/model/: edge.rs  embedding.rs  entity.rs  mod.rs  summary.rs
crates/grakno-core/src/store/: edges.rs  embeddings.rs  entities.rs  files.rs  mod.rs  schema.rs  stats.rs  summaries.rs  task_routes.rs
crates/grakno-core/src/store/grafeo/: edges.rs  embeddings.rs  entities.rs  files.rs  mod.rs  stats.rs  summaries.rs  task_routes.rs
crates/grakno-core/src/store/sqlite/: edges.rs  embeddings.rs  entities.rs  files.rs  mod.rs  summaries.rs  task_routes.rs  usearch.rs
crates/grakno-index/: Cargo.toml
crates/grakno-index/src/: discover.rs  error.rs  id.rs  indexer.rs  lib.rs  markdown.rs  mise.rs  parser.rs  parser_astro.rs  parser_package_json.rs  parser_ts.rs
crates/grakno-query/: Cargo.toml
crates/grakno-query/src/: classify.rs  expand.rs  pipeline.rs  plan.rs  rerank.rs  retrieve.rs
crates/grakno-summarize/: Cargo.toml
crates/grakno-summarize/src/: client.rs  config.rs  embedding.rs  error.rs  lib.rs  summarizer.rs
crates/grakno/src/: cli.rs  config.rs  main.rs  observability.rs
docs/: article.md  brief.md  graph-model-spec.md  graph-model.md  prd.md
