[workspace]
resolver = "2"
members = ["chizu-cli", "chizu-core"]

[workspace.dependencies]
argh = "0.1"
blake3 = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tracing = "0.1"
usearch = "2"
