[workspace]
resolver = "2"
members = ["chizu-cli", "chizu-core", "chizu-index"]

[workspace.dependencies]
argh = "0.1"
blake3 = "1"
globset = "0.4"
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tracing = "0.1"
usearch = "2"
bolero = "0.13"
bolero-generator = "0.13"
tempfile = "3"
