[workspace]
resolver = "2"
members = ["chizu-cli", "chizu-core", "chizu-index", "chizu-query"]

[workspace.dependencies]
argh = "0.1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockagentruntime = "1"
aws-sdk-bedrockruntime = "1"
blake3 = "1"
futures = "0.3"
globset = "0.4"
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tracing = "0.1"
usearch = "2"
cargo_toml = "0.22"
bolero = "0.13"
bolero-generator = "0.13"
tempfile = "3"
tiktoken-rs = "0.9.1"
base64 = "0.22"
rustc-hash = "1.1"
ruzstd = "0.8.2"
