[package]
name = "chizu-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "chizu"
path = "src/main.rs"

[dependencies]
chizu-core = { path = "../chizu-core" }
chizu-index = { path = "../chizu-index" }
chizu-query = { path = "../chizu-query" }
argh = { workspace = true }
layout-rs = "0.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
