[package]
name = "chizu-cli"
version = "0.2.0"
edition = "2024"
description = "CLI for Chizu, a local repository knowledge graph and subject-to-file routing engine"
license = "MIT"
repository = "https://github.com/l1x/chizu"
homepage = "https://github.com/l1x/chizu"
documentation = "https://docs.rs/chizu-cli"
readme = "../README.md"
keywords = ["code-search", "knowledge-graph", "developer-tools", "cli", "agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "chizu"
path = "src/main.rs"

[dependencies]
chizu-core = { version = "0.2.0", path = "../chizu-core" }
chizu-index = { version = "0.2.0", path = "../chizu-index" }
chizu-query = { version = "0.2.0", path = "../chizu-query" }
argh = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minijinja = "2.19.0"

[dev-dependencies]
tempfile = "3"
