[package]
name = "chizu-core"
version = "0.3.0"
edition = "2024"
description = "Core types, storage, config, and provider abstractions for the Chizu repository knowledge graph"
license = "MIT"
repository = "https://github.com/vectorian-rs/chizu"
homepage = "https://github.com/vectorian-rs/chizu"
documentation = "https://docs.rs/chizu-core"
readme = "../README.md"
keywords = ["code-search", "knowledge-graph", "agents", "sqlite", "usearch"]
categories = ["development-tools", "data-structures"]

[dependencies]
reqwest = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
usearch = { workspace = true }

[features]
test-support = ["dep:tempfile"]

[dependencies.tempfile]
version = "3"
optional = true

[dev-dependencies]
bolero = { workspace = true }
bolero-generator = { workspace = true }
mockito = "1"
tempfile = { workspace = true }
