[package]
name = "chizu-index"
version = "0.1.0"
edition = "2024"

[dependencies]
chizu-core = { path = "../chizu-core" }
blake3 = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }

[dev-dependencies]
bolero = { workspace = true }
bolero-generator = { workspace = true }
tempfile = { workspace = true }
