[package]
name = "chizu-index"
version = "0.2.0"
edition = "2024"

[dependencies]
chizu-core = { path = "../chizu-core" }
blake3 = { workspace = true }
cargo_toml = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tiktoken-rs = { workspace = true }
base64 = { workspace = true }
rustc-hash = { workspace = true }
ruzstd = { workspace = true }

[dev-dependencies]
bolero = { workspace = true }
bolero-generator = { workspace = true }
tempfile = { workspace = true }
