[package]
name = "chizu-index"
version = "0.2.0"
edition = "2024"
description = "Indexing pipeline and adapters for Chizu repository facts, summaries, and embeddings"
license = "MIT"
repository = "https://github.com/l1x/chizu"
homepage = "https://github.com/l1x/chizu"
documentation = "https://docs.rs/chizu-index"
readme = "../README.md"
keywords = ["code-indexing", "knowledge-graph", "agents", "tree-sitter", "embeddings"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
chizu-core = { version = "0.2.0", path = "../chizu-core" }
blake3 = { workspace = true }
cargo_toml = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tiktoken-rs = { workspace = true }
base64 = { workspace = true }
rustc-hash = { workspace = true }
ruzstd = { workspace = true }

[dev-dependencies]
bolero = { workspace = true }
bolero-generator = { workspace = true }
tempfile = { workspace = true }
