[package]
name = "chizu-query"
version = "0.3.0"
edition = "2024"
description = "Query, retrieval, expansion, and reranking pipeline for Chizu reading plans"
license = "MIT"
repository = "https://github.com/vectorian-rs/chizu"
homepage = "https://github.com/vectorian-rs/chizu"
documentation = "https://docs.rs/chizu-query"
readme = "../README.md"
keywords = ["code-search", "knowledge-graph", "retrieval", "agents", "ranking"]
categories = ["development-tools", "algorithms"]

[dependencies]
chizu-core = { version = "0.3.0", path = "../chizu-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
chizu-core = { version = "0.3.0", path = "../chizu-core", features = ["test-support"] }
tempfile = "3"
