[package]
name = "chizu-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
usearch = { workspace = true }

[dev-dependencies]
tempfile = "3"
