[package]
name = "chizu-index"
version = "0.1.0"
edition = "2021"

[dependencies]
chizu-core = { path = "../chizu-core" }
thiserror = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = "0.3"
tree-sitter = "0"
tree-sitter-rust = "0"
tree-sitter-typescript = "0"
tree-sitter-hcl = "1"
tree-sitter-md = "0"
cargo_metadata = "0"
toml = "1"
tracing = { workspace = true }
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3"
