[package]
name = "chizu"
version = "0.2.1"
edition = "2021"

[features]
default = ["sqlite_usearch"]
sqlite_usearch = ["chizu-core/sqlite_usearch"]
grafeo = ["chizu-core/grafeo"]

[dependencies]
argh = "0.1"
chizu-core = { path = "../chizu-core" }
chizu-index = { path = "../chizu-index" }
chizu-summarize = { path = "../chizu-summarize" }
chizu-query = { path = "../chizu-query" }
chizu-visualize = { path = "../chizu-visualize" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
notify = "7"
rolly = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
