[package]
name = "grakno-index"
version = "0.1.0"
edition = "2021"

[dependencies]
grakno-core = { path = "../grakno-core" }
thiserror = { workspace = true }
blake3 = { workspace = true }
tree-sitter = "0"
tree-sitter-rust = "0"
tree-sitter-typescript = "0"
tree-sitter-hcl = "1"
tree-sitter-toml-ng = "0"
tree-sitter-yaml = "0"
tree-sitter-html = "0"
tree-sitter-md = "0"
tree-sitter-tlaplus = "1"
tree-sitter-c-sharp = "0"
tree-sitter-sequel = "0"
cargo_metadata = "0"
toml = "1"
tracing = { workspace = true }
regex = "1"
