[package]
name = "grakno"
version = "0.1.0"
edition = "2021"

[features]
grafeo = ["grakno-core/grafeo"]
usearch = ["grakno-core/usearch"]

[dependencies]
argh = "0.1"
grakno-core = { path = "../grakno-core" }
grakno-index = { path = "../grakno-index" }
grakno-summarize = { path = "../grakno-summarize" }
grakno-query = { path = "../grakno-query" }
serde_json = { workspace = true }
notify = "7"
