[package]
name = "grakno"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite_usearch"]
sqlite_usearch = ["grakno-core/sqlite_usearch"]
grafeo = ["grakno-core/grafeo"]

[dependencies]
argh = "0.1"
grakno-core = { path = "../grakno-core" }
grakno-index = { path = "../grakno-index" }
grakno-summarize = { path = "../grakno-summarize" }
grakno-query = { path = "../grakno-query" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
notify = "7"
rolly = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
